Adding nav item for insights settings.

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -151,6 +151,27 @@
                             ]
                         }
                     ]
+                },
+                {
+                    "appId": "applications",
+                    "title": "Insights",
+                    "href": "/settings/applications/insights",
+                    "permissions": [
+                        {
+                            "method": "isEntitled",
+                            "args": [
+                                "insights"
+                            ]
+                        },
+                        {
+                            "method": "hasPermissions",
+                            "args": [
+                                [
+                                    "insights:*:*"
+                                ]
+                            ]
+                        }
+                    ]
                 }
             ]
         },
