App services nav fixes (#1127)
* Add ACS bac to pre-prod config

* Remove isBeta from Kafka streams in subscriptions category.

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -102,6 +102,23 @@
       ]
     },
     {
+      "title": "Advanced Cluster Security",
+      "expandable": true,
+      "routes": [
+          {
+              "appId": "applicationServices",
+              "title": "ACS Instances",
+              "isBeta": true,
+              "href": "/application-services/acs"
+          },
+          {
+              "title": "Documentation",
+              "isExternal": true,
+              "href": "https://docs.openshift.com/acs/3.66/welcome/index.html"
+          }
+      ]
+    },
+    {
       "groupId": "insights",
       "icon": "trend-up",
       "title": "Red Hat Insights",
@@ -113,7 +130,6 @@
             {
               "appId": "applicationServices",
               "title": "Streams for Apache Kafka",
-              "isBeta": true,
               "href": "/application-services/subscriptions/streams"
             }
           ]
