Update application-services-navigation.json (#1133)

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -67,6 +67,7 @@
             {
               "appId": "applicationServices",
               "title": "Connectors Instances",
+              "isBeta": true,
               "href": "/application-services/connectors"
             },
             {
