--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -1,92 +1,123 @@
 {
-    "id": "application-services",
-    "title": "Application Services",
-    "navItems": [
+  "id": "application-services",
+  "title": "Application and Data Services",
+  "navItems": [
+    {
+      "appId": "applicationServices",
+      "title": "Overview",
+      "filterable": false,
+      "href": "/application-services/overview"
+    },
+    {
+      "appId": "applicationServices",
+      "title": "Learning Resources",
+      "href": "/application-services/learning-resources"
+    },
+    {
+      "groupId": "application-services",
+      "title": "Application Services",
+      "icon": "cloud",
+      "navItems": [
         {
-            "appId": "applicationServices",
-            "title": "Overview",
-            "filterable": false,
-            "href": "/application-services/overview"
+          "appId": "applicationServices",
+          "title": "API Management",
+          "href": "/application-services/api-management"
         },
         {
-            "appId": "applicationServices",
-            "title": "API Management",
-            "href": "/application-services/api-management"
+          "title": "Streams for Apache Kafka",
+          "expandable": true,
+          "routes": [
+            {
+              "appId": "applicationServices",
+              "title": "Overview",
+              "href": "/application-services/streams/overview"
+            },
+            {
+              "appId": "applicationServices",
+              "title": "Kafka Instances",
+              "href": "/application-services/streams"
+            },
+            {
+              "title": "Documentation",
+              "isExternal": true,
+              "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka"
+            }
+          ]
         },
         {
-            "appId": "applicationServices",
-            "title": "Data Science",
-            "href": "/application-services/data-science"
+          "title": "Service Registry",
+          "expandable": true,
+          "routes": [
+            {
+              "appId": "applicationServices",
+              "title": "Service Registry Instances",
+              "href": "/application-services/service-registry"
+            },
+            {
+              "title": "Documentation",
+              "isExternal": true,
+              "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_service_registry"
+            }
+          ]
         },
         {
-            "appId": "applicationServices",
-            "title": "Service Accounts",
-            "href": "/application-services/service-accounts"
+          "title": "Connectors",
+          "expandable": true,
+          "routes": [
+            {
+              "appId": "applicationServices",
+              "title": "Connectors Instances",
+              "isBeta": true,
+              "href": "/application-services/connectors"
+            },
+            {
+              "title": "Documentation",
+              "isExternal": true,
+              "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_connectors"
+            }
+          ]
         },
         {
-            "title": "Service Registry",
-            "expandable": true,
-            "routes": [
-                {
-                    "appId": "applicationServices",
-                    "title": "Service Registry Instances",
-                    "href": "/application-services/service-registry"
-                },
-                {
-                    "title": "Documentation",
-                    "isExternal": true,
-                    "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_service_registry"
-                }
-            ]
-        },
-        {
-            "title": "Streams for Apache Kafka",
-            "expandable": true,
-            "routes": [
-                {
-                  "appId": "applicationServices",
-                  "title": "Kafka Overview",
-                  "href": "/application-services/streams/overview"
-                },
-                {
-                    "appId": "applicationServices",
-                    "title": "Kafka Instances",
-                    "href": "/application-services/streams/kafkas"
-                },
-                {
-                    "title": "Documentation",
-                    "isExternal": true,
-                    "href": "https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka"
-                }
-            ]
-        },
-        {
-            "groupId": "insights",
-            "icon": "trend-up",
-            "title": "Insights",
-            "navItems": [
-                {
-                    "title": "Subscriptions",
-                    "expandable": true,
-                    "routes": [
-                        {
-                            "appId": "applicationServices",
-                            "title": "Streams for Apache Kafka",
-                            "href": "/application-services/subscriptions/streams"
-                        }
-                    ]
-                }
-            ]
-        },
-        {
-            "appId": "dbaas",
-            "title": "Database Access",
-            "href": "/application-services/databases"
-        },
-        {
-            "appId": "applicationServices",
-            "title": "Learning Resources",
-            "href": "/application-services/learning-resources"
+          "appId": "applicationServices",
+          "title": "Service Accounts",
+          "href": "/application-services/service-accounts"
         }
-    ]
+      ]
+    },
+    {
+      "groupId": "data-services",
+      "title": "Data Services",
+      "icon": "database",
+      "navItems": [
+        {
+          "appId": "dbaas",
+          "title": "Database Access",
+          "href": "/application-services/databases"
+        },
+        {
+          "appId": "applicationServices",
+          "title": "Data Science",
+          "href": "/application-services/data-science"
+        }
+      ]
+    },
+    {
+      "groupId": "insights",
+      "icon": "trend-up",
+      "title": "Red Hat Insights",
+      "navItems": [
+        {
+          "title": "Subscriptions",
+          "expandable": true,
+          "routes": [
+            {
+              "appId": "applicationServices",
+              "title": "Streams for Apache Kafka",
+              "href": "/application-services/subscriptions/streams"
+            }
+          ]
+        }
+      ]
+    }
+  ]
 }
