add config for edge management prod-stable

--- a/main.yml
+++ b/main.yml
@@ -368,6 +368,15 @@ drift:
         title: Baselines
   source_repo: https://github.com/RedHatInsights/drift-frontend
 
+edge:
+  title: RHEL for Edge
+  api:
+    versions:
+      - v1
+  deployment_repo: https://github.com/RedHatInsights/edge-frontend-build
+  source_repo: https://github.com/RedHatInsights/edge-frontend
+  top_level: true
+
 frontend-assets:
   title: Frontend Assets
   deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
