--- a/main.yml
+++ b/main.yml
@@ -690,6 +690,8 @@ onboarding:
 
 streams:
   title: "Streams for Apache Kafka"
+  api:
+    url: https://api.openshift.com/api/kafkas_mgmt/v1/openapi
   frontend:
     sub_apps:
       - id: kafkas
