--- a/main.yml
+++ b/main.yml
@@ -619,6 +619,8 @@ ocp-advisor:
 
 streams:
   title: "Streams for Apache Kafka"
+  api:
+    url: https://api.openshift.com/api/kafkas_mgmt/v1/openapi
   frontend:
     sub_apps:
       - id: kafkas
