--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -49,8 +49,8 @@
             "routes": [
                 {
                     "appId": "notifications",
-                    "title": "Red Hat Enterprise Linux",
-                    "href": "/settings/notifications/rhel"
+                    "title": "Application Services",
+                    "href": "/settings/notifications/application-services"
                 },
                 {
                     "appId": "notifications",
@@ -59,8 +59,13 @@
                 },
                 {
                     "appId": "notifications",
-                    "title": "Application Services",
-                    "href": "/settings/notifications/application-services"
+                    "title": "Red Hat Enterprise Linux",
+                    "href": "/settings/notifications/rhel"
+                },
+                {
+                    "appId": "notifications",
+                    "title": "Console",
+                    "href": "/settings/notifications/console"
                 }
             ]
         },
