Renames settings in RHC to Manage configuration

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -81,7 +81,7 @@
             "routes": [
                 {
                     "appId": "connector",
-                    "title": "Settings",
+                    "title": "Manage configuration",
                     "href": "/settings/connector"
 
                 },
