Renames connector to Remote Host Configuration and adds nav item

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -70,9 +70,16 @@
             ]
         },
         {
-            "appId": "connector",
-            "title": "Red Hat Connector",
-            "href": "/settings/connector"
+            "title": "Remote Host Configuration",
+            "expandable": true,
+            "routes": [
+                {
+                    "appId": "connector",
+                    "title": "Manage configuration",
+                    "href": "/settings/connector"
+
+                }
+            ]
         },
         {
             "title": "Applications",
