Add activation keys back to nav in beta

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -83,13 +83,17 @@
                     "appId": "connector",
                     "title": "Manage configuration",
                     "href": "/settings/connector"
-
+                },
+                {
+                    "appId": "connector",
+                    "title": "Activation Keys",
+                    "href": "/settings/connector/activation-keys"
                 }
             ]
         },
         {
             "title": "Applications",
-            "expandable": true,            
+            "expandable": true,
             "permissions": [
                 {
                     "method": "hasPermissions",
