--- a/main.yml
+++ b/main.yml
@@ -174,6 +174,8 @@ automation-hub:
         title: Partners
       - id: repositories
         title: Repo Management
+      - id: tasks
+        title: Task Management
       - id: token
         title: Connect to Hub
   source_repo: https://github.com/ansible/ansible-hub-ui
@@ -689,7 +691,7 @@ openshift:
 
   top_level: true
 
-ocp-advisor: 
+ocp-advisor:
   title: Advisor
   source_repo: https://github.com/RedHatInsights/ocp-advisor-frontend
   deployment_repo: https://github.com/RedHatInsights/ocp-advisor-frontend-build
@@ -700,12 +702,12 @@ ocp-advisor:
     sub_apps:
       - id: clusters
         title: Clusters
-        reload: clusters 
+        reload: clusters
       - id: recommendations
         title: Recommendations
         reload: recommendations
 
-ocp-vulnerability: 
+ocp-vulnerability:
   title: Vulnerability
   channel: '#forum-ccx-vulnerability'
   source_repo: https://github.com/RedHatInsights/vuln4shift-frontend
@@ -717,7 +719,7 @@ ocp-vulnerability:
     sub_apps:
       - id: cves
         title: CVEs
-        reload: cves 
+        reload: cves
       - id: clusters
         title: Clusters
         reload: clusters
@@ -780,7 +782,7 @@ application-services:
         group: overview
       - id: learning-resources
         title: "Learning Resources"
-        group: overview  
+        group: overview
       - id: api-management
         title: "API Management"
         group: overview
