--- a/main.yml
+++ b/main.yml
@@ -1219,7 +1219,8 @@ iam:
   deployment_repo: https://github.com/RedHatInsights/iam-ui-build
   frontend:
     paths:
-        - /iam
+        - /iam/authpolicy
+        - /iam/useraccess
     sub_apps:
       - id: user-access
       - id: authentication-policy
