Set api designer to isBeta:true

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -24,6 +24,7 @@
           "routes": [
             {
               "appId": "applicationServices",
+              "isBeta": true,
               "title": "API and Schema Designs",
               "href": "/application-services/api-designer"
             },
