Add activation key link to prod-beta

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -77,7 +77,11 @@
                     "appId": "connector",
                     "title": "Manage configuration",
                     "href": "/settings/connector"
-
+                },
+                {
+                    "appId": "connector",
+                    "title": "Activation Keys",
+                    "href": "/settings/connector/activation-keys"
                 }
             ]
         },
