--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -83,7 +83,11 @@
                     "appId": "connector",
                     "title": "Manage configuration",
                     "href": "/settings/connector"
-
+                },
+                {
+                    "appId": "connector",
+                    "title": "Activation Keys",
+                    "href": "/settings/connector/activation-keys"
                 }
             ]
         },
