feat: adding acs to prod-beta

--- a/main.yml
+++ b/main.yml
@@ -14,6 +14,18 @@ access-requests:
     paths:
       - /internal/access-requests
 
+acs:
+  title: Advanced Cluster Security
+  api:
+    versions:
+      - v1
+  description: Frontend for Red Hat employees to manage ACS instances
+  deployment_repo: https://github.com/RedHatInsights/acs-ui-build
+  frontend:
+    paths:
+      - /application-services/acs
+  source_repo: https://github.com/RedHatInsights/acs-ui
+
 advisor:
   title: Advisor
   api:
