Add activation keys link to prod-stable

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -78,6 +78,11 @@
                     "title": "Manage configuration",
                     "href": "/settings/connector"
 
+                },
+                {
+                    "appId": "connector",
+                    "title": "Activation Keys",
+                    "href": "/settings/connector/activation-keys"
                 }
             ]
         },
