--- a/main.yml
+++ b/main.yml
@@ -452,6 +452,12 @@ malware:
         title: Signatures
   source_repo: https://github.com/RedHatInsights/malware-detection-frontend
 
+subscription-inventory:
+  title: Subscription Inventory
+  channel: '#subscription-inventory'
+  deployment_repo: https://github.com/RedHatInsights/subscription-inventory-ui-build
+  source_repo: https://github.com/RedHatInsights/subscription-inventory-ui
+
 manifests:
   title: Manifests
   channel: '#subscription-central'
