--- a/main.yml
+++ b/main.yml
@@ -765,56 +765,53 @@ service-registry:
         navigate: https://access.redhat.com/documentation/en-us/red_hat_openshift_service_registry
 
 
-## Managed Services APIs
-
-kafkamgmt:
-  title: "OpenShift Streams for Apache Kafka Management API"
+## App Services (RHOAS) APIs
+app-services-apis:
+  title: Application Services
   api:
-    owner: redhat-developer
-    repo: app-services-sdk-core
-    path: kas-fleet-manager.yaml?ref=doc-portal
-
-connectormgmt:
-  title: "OpenShift Connectors Management API "
-  api:
-    owner: redhat-developer
-    repo: app-services-sdk-core
-    path: connector_mgmt?ref=doc-portal
-
-serviceregistrymgmt:
-  title: "OpenShift Service Registry Management API"
-  api:
-    owner: redhat-developer
-    repo: app-services-sdk-core
-    path: srs-fleet-manager.json?ref=doc-portal
-  
-smarteventsmgmt:
-  title: "Smart Events Management API"
-  api:
-    owner: redhat-developer
-    repo: app-services-sdk-core
-    path: smartevents-mgmt.yaml?ref=doc-portal
-
-serviceaccountsmgmt:
-  title: "Service Accounts Management API"
-  api:
-    owner: redhat-developer
-    repo: app-services-sdk-core
-    path: service-accounts.yaml?ref=doc-portal
-
-kafkainstance:
-  title: "OpenShift Streams for Apache Kafka Instance API"
-  api:
-    owner: redhat-developer
-    repo: app-services-sdk-core
-    path: kafka-admin-rest.yaml?ref=doc-portal
-
-registryinstance:
-  title: "OpenShift Service Registry Instance API"
-  api:
-    owner: redhat-developer
-    repo: app-services-sdk-core
-    path: registry-instance.json?ref=doc-portal
+    subItems:
+      kafkamgmt:
+        title: "OpenShift Streams for Apache Kafka Management API"
+        api:
+          owner: redhat-developer
+          repo: app-services-sdk-core
+          path: kas-fleet-manager.yaml?ref=doc-portal
+      connectormgmt:
+        title: "OpenShift Connectors Management API "
+        api:
+          owner: redhat-developer
+          repo: app-services-sdk-core
+          path: connector_mgmt?ref=doc-portal
+      serviceregistrymgmt:
+        title: "OpenShift Service Registry Management API"
+        api:
+          owner: redhat-developer
+          repo: app-services-sdk-core
+          path: srs-fleet-manager.json?ref=doc-portal
+      smarteventsmgmt:
+        title: "Smart Events Management API"
+        api:
+          owner: redhat-developer
+          repo: app-services-sdk-core
+          path: smartevents-mgmt.yaml?ref=doc-portal
+      serviceaccountsmgmt:
+        title: "Service Accounts Management API"
+        api:
+          owner: redhat-developer
+          repo: app-services-sdk-core
+          path: service-accounts.yaml?ref=doc-portal
+      kafkainstance:
+        title: "OpenShift Streams for Apache Kafka Instance API"
+        api:
+          owner: redhat-developer
+          repo: app-services-sdk-core
+          path: kafka-admin-rest.yaml?ref=doc-portal
+      registryinstance:
+        title: "OpenShift Service Registry Instance API"
+        api:
+          owner: redhat-developer
+          repo: app-services-sdk-core
+          path: registry-instance.json?ref=doc-portal
 
 
 application-services:
