--- a/main.yml
+++ b/main.yml
@@ -157,6 +157,8 @@ automation-hub:
         title: Partners
       - id: repositories
         title: Repo Management
+      - id: tasks
+        title: Task Management
       - id: token
         title: Connect to Hub
   source_repo: https://github.com/ansible/ansible-hub-ui
