--- a/main.yml
+++ b/main.yml
@@ -1284,13 +1284,16 @@ iam:
       - id: user-access
       - id: authentication-policy
 
-hybrid-committed-spend:
-  title: Hybrid Committed Spend
+business-services:
+  title: Business Services
   deployment_repo: https://github.com/RedHatInsights/hybrid-committed-spend-ui-build
   frontend:
+    title: Hybrid Committed Spend
     paths:
-      - /business-services/hybrid-committed-spend/overview
-      - /business-services/hybrid-committed-spend/explorer
+      - /business-services/hybrid-committed-spend
     sub_apps:
       - id: overview
+        title: Overview
+        default: true
       - id: explorer
+        title: Explorer
