Shorten product title per UXD designer's request

--- a/main.yml
+++ b/main.yml
@@ -1288,7 +1288,7 @@ business-services:
   title: Business Services
   deployment_repo: https://github.com/RedHatInsights/hybrid-committed-spend-ui-build
   frontend:
-    title: Hybrid Committed Spend
+    title: Committed Spend
     paths:
       - /business-services/hybrid-committed-spend
     sub_apps:
