--- a/main.yml
+++ b/main.yml
@@ -1288,12 +1288,12 @@ business-services:
   title: Business Services
   deployment_repo: https://github.com/RedHatInsights/hybrid-committed-spend-ui-build
   frontend:
-    title: Hybrid Committed Spend
+    title: Committed Spend
     paths:
       - /business-services/hybrid-committed-spend
     sub_apps:
       - id: overview
         title: Overview
         default: true
-      - id: explorer
-        title: Explorer
+      - id: details
+        title: Details
