--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -123,7 +123,7 @@
       "expandable": true,
       "routes": [
           {
-              "appId": "applicationServices",
+              "appId": "acs",
               "title": "ACS Instances",
               "isBeta": true,
               "href": "/application-services/acs"
