feat: adding acs overview page

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -123,10 +123,16 @@
       "expandable": true,
       "routes": [
         {
-          "appId": "applicationServices",
+          "appId": "acs",
           "title": "ACS Instances",
           "isBeta": true,
-          "href": "/application-services/acs"
+          "href": "/application-services/acs/overview"
+        },
+        {
+          "appId": "acs",
+          "title": "ACS Instances",
+          "isBeta": true,
+          "href": "/application-services/acs/instances"
         },
         {
           "title": "Documentation",
