Updating the title for the overview route

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -124,7 +124,7 @@
       "routes": [
         {
           "appId": "acs",
-          "title": "ACS Instances",
+          "title": "Overview",
           "isBeta": true,
           "href": "/application-services/acs/overview"
         },
