use correct appid and gate acs behind email (#1292)
* use correct appid and gate acs behind email

* Update application-services-navigation.json

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -80,9 +80,15 @@
         {
           "title": "Connectors",
           "expandable": true,
+          "permissions": [
+            {
+              "method": "withEmail",
+              "args": ["@redhat.com"]
+            }
+          ],
           "routes": [
             {
-              "appId": "applicationServices",
+              "appId": "acs",
               "title": "Connectors Instances",
               "isBeta": true,
               "href": "/application-services/connectors"
