--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -123,8 +123,7 @@
       "routes": [
         {
           "appId": "acs",
-          "title": "ACS Instances",
-          "isBeta": true,
+          "title": "Overview",
           "href": "/application-services/acs/overview"
         },
         {
