learning resources module set up

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -128,6 +128,11 @@
             ]
         },
         {
+            "appId": "learningResources",
+            "title": "Learning Resources",
+            "href": "/settings/learning-resources"
+          },
+        {
             "title": "Documentation",
             "isExternal": true,
             "filterable": false,
