Fix reference to content-sources in main.yaml

--- a/main.yml
+++ b/main.yml
@@ -291,7 +291,7 @@ connect:
       - /connect
   mailing_list: it-partner-integration-team@redhat.com
 
-contentSources:
+content-sources:
   title: Repositories
   api:
     versions:
