Change content-sources to use /settings/ path
app was already updated to support this path in stage

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -47,7 +47,7 @@
         {
             "appId": "contentSources",
             "title": "Repositories",
-            "href": "/insights/content"
+            "href": "/settings/content"
         },
 	{
             "appId": "notifications",
