--- a/main.yml
+++ b/main.yml
@@ -649,6 +649,9 @@ ocp-advisor:
 
 ocp-vulnerability: 
   title: Vulnerability
+  api:
+    versions:
+      - v1
   channel: '#forum-ccx-vulnerability'
   source_repo: https://github.com/RedHatInsights/vuln4shift-frontend
   deployment_repo: https://github.com/RedHatInsights/vuln4shift-frontend-build
