--- a/main.yml
+++ b/main.yml
@@ -890,6 +890,19 @@ subscriptions:
         navigate: https://access.redhat.com/products/subscription-central?extIdCarryOver=true&sc_cid=701f2000001Css5AAC
   source_repo: https://github.com/RedHatInsights/curiosity-frontend
 
+tasks:
+  title: Tasks
+  api:
+    versions:
+      - v1
+  channel: '#tasks'
+  deployment_repo: https://github.com/RedHatInsights/tasks-frontend-build
+  frontend:
+    module: tasks#./RootApp
+    paths:
+      - /insights/tasks
+  source_repo: https://github.com/RedHatInsights/tasks-frontend
+
 trust:
   title: Insights security
   channel: '#advisor'
