Deploy learning resources

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -119,10 +119,9 @@
             ]
         },
         {
-            "title": "Documentation",
-            "isExternal": true,
-            "filterable": false,
-            "href": "https://access.redhat.com/documentation/en-us/red_hat_hybrid_cloud_console/"
+            "appId": "learningResources",
+            "title": "Learning Resources",
+            "href": "/settings/learning-resources"
         }
     ]
 }
